--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    
 <header class="page-header">
+    <div class="container">
     <nav>
         <a class="logo" href="#" lang="en">Web<span class="logo-header">Studio</span> </a>
         <ul class="nav-list list">
@@ -26,16 +29,18 @@
                 <a href="#" class="nav-link link">Контакти</a>
             </li>
         </ul>
-
     </nav>
     <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
     </ul>
+    </div>
 </header>
+
     <main>
         <!--Проєкти-->
 <section>
+    <div class="container">
     <h1 hidden>Наші проєкти</h1>
     <ul class="nav-list list">
                         <li class="nav-item">
@@ -93,9 +98,11 @@
         <p class="project-type">Додаток</p>
     </li>
     </ul>
+    </div>
 </section>
     </main>
     <footer class="page-footer">
+        <div class="container">
         <a class="logo" href="#" lang="en">Web<span class="logo-footer">Studio</span></a>
         <address class="footer-address">
             <ul class="list">
@@ -109,6 +116,7 @@
     
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
