--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,28 @@
 <body>
     
 <header class="page-header">
-    <div class="container">
-    <nav>
-        <a class="logo" href="#" lang="en">Web<span class="logo-header">Studio</span> </a>
-        <ul class="nav-list list">
-            <li class="nav-item">
-                <a href="./index.html" class="nav-link link">Студія</a>
-            </li>
-            <li class="nav-item">
-                <a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link link">Контакти</a>
-            </li>
+    <div class="container header-container">
+        <nav class="nav-header">
+            <a class="logo header-link" href="#" lang="en">Web<span class="logo-header">Studio</span> </a>
+            <ul class="nav-list list">
+                <li class="nav-item">
+                    <a href="./index.html" class="nav-link link current">Студія</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link link">Контакти</a>
+                </li>
+            </ul>
+
+        </nav>
+
+        <ul class="addres-list list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
-    </ul>
+
     </div>
 </header>
 
