final result flex-box

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
             <a class="logo header-link" href="#" lang="en">Web<span class="logo-header">Studio</span> </a>
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a href="./index.html" class="nav-link link current">Студія</a>
+                    <a href="./index.html" class="nav-link link">Студія</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+                    <a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link link">Контакти</a>
@@ -42,10 +42,10 @@
 
     <main>
         <!--Проєкти-->
-<section>
+<section class="project-section">
     <div class="container">
     <h1 hidden>Наші проєкти</h1>
-    <ul class="nav-list list">
+    <ul class="nav-project-list list">
                         <li class="nav-item">
                     <button type="button" class ="nav-button current">Усі</button>
                 </li>
@@ -63,42 +63,61 @@
                 </li>
 
     </ul>
-    <ul class="list">
-        <li class="project-item"> <img src="./images/portfolio/tekhokryak.jpg" alt="сайт технокрят" width="370"/>
+    <ul class="list card-set">
+        <li class="project-item">
+        <img src="./images/portfolio/tekhokryak.jpg" alt="сайт технокрят" width="370"/>
+        <div class="card-thumb">
         <h2 class="project-title">Технокряк</h2>
         <p class="project-type">Веб-сайт</p>
+        </div>
         </li>
         <li class="project-item"> <img src="./images/portfolio/poster.jpg" alt="баскетбольний постер" width="370" />
+            <div class="card-thumb">
             <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
             <p class="project-type">Дизайн</p>
+            </div>
         </li>
         <li class="project-item"> <img src="./images/portfolio/seafood.jpg" alt="ресторан" width="370" />
+            <div class="card-thumb">
             <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
             <p class="project-type">Додаток</p>
+            </div>
         </li>
     <li class="project-item"> <img src="./images/portfolio/prime.jpg" alt="навушники" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title">Проєкт <span lang="en">Prime</span> </h2>
         <p class="project-type">Маркетинг</p>
+        </div>
     </li>
     <li class="project-item"> <img src="./images/portfolio/boxes.jpg" alt="коробки" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title">Проєкт <span lang="en">Boxes</span> </h2>
         <p class="project-type">Додаток</p>
+        </div>
     </li>
     <li class="project-item"> <img src="./images/portfolio/website.jpg" alt="монітор" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
         <p class="project-type">Веб-сайт</p>
+        </div>
     </li>
     <li class="project-item"> <img src="./images/portfolio/publication.jpg" alt="журнал" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title">Видання <span lang="en">Limited Edition</span> </h2>
         <p class="project-type">Дизайн</p>
+        </div>
     </li>
     <li class="project-item"> <img src="./images/portfolio/lab.jpg" alt="" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title">Проєкт <span lang="en">LAB</span> </h2>
         <p class="project-type">Маркетинг</p>
+        </div>
     </li>
     <li class="project-item"> <img src="./images/portfolio/growing_business.jpg" alt="ноутбук" width="370" />
+        <div class="card-thumb">
         <h2 class="project-title" lang="en">Growing Business</h2>
         <p class="project-type">Додаток</p>
+        </div>
     </li>
     </ul>
     </div>
