--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>
     <!--Hero-->
     <section class="hero-section">
-        <h1 class ="hero-title">Ефективні рішення для<br>вашого бізнесу</h1>
+        <h1 class ="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
     </section>
    <!--Переваги-->
