--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 
     <main>
         <!--Проєкти-->
-<section class="project-section">
+<section class="section">
     <div class="container">
     <h1 hidden>Наші проєкти</h1>
     <ul class="nav-project-list list">
