--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
    <!--Переваги-->
 <!--h2 відсутній на макеті, сховати за допомогою CSS-->
-    <section class="advantages-section">
+    <section class="section">
         <div class="container">
         <h2 hidden>Переваги</h2>
         <ul class="advantages-container list">
@@ -82,7 +82,7 @@
         </div>
     </section>
     <!--Наша команда-->
-    <section class="team-section">
+    <section class="team-section section">
         <div class="team-container container">
         <h2 class ="team-title">Наша команда</h2>
         <ul class ="team-list list">
